gtk3: Fix horizontal scrollbar stepper icons

--- a/common/gtk-3.0/3.20/sass/_common.scss
+++ b/common/gtk-3.0/3.20/sass/_common.scss
@@ -1907,8 +1907,8 @@ scrollbar {
   }
 
   &.horizontal button {
-    &.down { -gtk-icon-source: -gtk-icontheme('pan-right-symbolic'); }
-    &.up { -gtk-icon-source: -gtk-icontheme('pan-left-symbolic'); }
+    &.down { -gtk-icon-source: -gtk-icontheme('pan-end-symbolic'); }
+    &.up { -gtk-icon-source: -gtk-icontheme('pan-start-symbolic'); }
   }
 
   // slider
